# Ocamulator

./: .gitignore  .ocamlformat  .ocp-indent  INSTALL.md  Install.md  README.md  dune  dune-project  log.txt  main.cpp  makefile
NESEMU/: dune-project
NESEMU/_build/: .db  .digest-db  log
NESEMU/lib/: dune
NESEMU/test/: dune
NESEmu/: dune-project
NESEmu/_build/: .db  .digest-db  log
NESEmu/lib/: dune
NESEmu/test/: dune
_build/: log
data/: exclude.lst  log.txt  ocamulator.yml
data/opcode/: .prettierrc
data/rom/: alive.nes  breakout.nes  chickshooter.nes  (+12 more)
lib/: dune
script/: install.sh
src/: .ocamlformat  dune-project
src/data_types/: uint.ml  uint_type.ml
src/lib/: dune
src/lib/cpu/: cpu.ml  cpu.mli  decode.ml  decode.mli  instruction.ml  instruction.mli  opcode.ml  opcode.mli  ram.ml  ram.mli
src/lib/opcode/: decode.mli  instruction.ml  instruction.mli  opcode.ml  opcode.mli
src/lib/ppu/: ppu.ml
src/lib/rom/: header.ml  mapper.ml  read.ml
src/lib/type/: alias.ml  uInt16.ml  uInt16.mli  uInt4.ml  uInt4.mli  uInt8.ml  uInt8.mli  uIntSet.mli  uIntX.ml  uIntX.mli
src/lib/util/: alias.ml  alias.mli  util.ml  util.mli
src/test/: dune  main.ml
src/test/cpu/: cpuTest.ml  decodeTest.ml  instructionTest.ml  opcodeTest.ml  ramTest.ml
src/test/opcode/: decodeTest.ml  instructionTest.ml  opcodeTest.ml
src/test/type/: aliasTest.ml  uInt16Test.ml  uInt4Test.ml  uInt8Test.ml  uIntXTest.ml
src/test/util/: aliasTest.ml  utilTest.ml
test/: dune  main.ml
util/: exclude.lst  install.sh  opencov.sh  opendoc.sh  remove.sh  scrape.py
(+341 files in other folders)
