(lang dune 3.6)
(name "Ocamulator")
(source (github "Sayeem2004/3110Project"))
(authors "Mohammad Khan" "Pablo Raigoza" "Evan Vera")
(maintainers "Mohammad Khan" "Pablo Raigoza" "Evan Vera")
(license MIT)
(package
 (name "Ocamulator")
 (synopsis "This package parses NES ROMs and runs them.")
 (description "This package parses NES ROMs and runs them.")
 (depends ocaml dune)
 (allow_empty))
